Crash with the Data Transfer Modifier (with any 'Edge Data' option) #70109

Closed
opened 2019-09-20 12:39:55 +02:00 by Lopo Isaac · 7 comments

System Information
Operating system: Linux-5.0.0-29-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 670/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.129

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-19 10:54, hash: 87ebc4ef4f
Worked: (optional)

Short description of error
Blender crashes when trying to move an object that has a Data Transfer Modifier, 'Edge Data' checked (sharp, uv seams...) and another object as source

Exact steps for others to reproduce the error

Gif >> https://drive.google.com/file/d/19mAicrmWsYUozsB_1X8crufkzY9FKPKI/view?usp=sharing

Steps:

  1. New file
  2. Duplicate default cube
  3. Add a Data Transfer Modifier to first cube. Select second cube as source.
  4. Select 'Edge Data' and any of the options (sharp, uv seams, subsurf crease...)
  5. Move first or second cube

Blend file >> https://drive.google.com/file/d/1v6Tl8xy-kMX9I6xt9VhoMyF7YKJ8iRgk/view?usp=sharing
(crash when trying to move one of the two cubes)

**System Information** Operating system: Linux-5.0.0-29-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 670/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.129 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-19 10:54, hash: `87ebc4ef4f` Worked: (optional) **Short description of error** Blender crashes when trying to move an object that has a Data Transfer Modifier, 'Edge Data' checked (sharp, uv seams...) and another object as source **Exact steps for others to reproduce the error** Gif >> https://drive.google.com/file/d/19mAicrmWsYUozsB_1X8crufkzY9FKPKI/view?usp=sharing Steps: 1) New file 2) Duplicate default cube 3) Add a Data Transfer Modifier to first cube. Select second cube as source. 4) Select 'Edge Data' and any of the options (sharp, uv seams, subsurf crease...) 5) Move first or second cube Blend file >> https://drive.google.com/file/d/1v6Tl8xy-kMX9I6xt9VhoMyF7YKJ8iRgk/view?usp=sharing (crash when trying to move one of the two cubes)
Author

Added subscriber: @lowpolysaac

Added subscriber: @lowpolysaac
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm.

daba3e871f was still good.
a7ac8a22f8 is bad.

Bisecting... (and marking as High prio since it is a regression...)

Can confirm. daba3e871f was still good. a7ac8a22f8 is bad. Bisecting... (and marking as High prio since it is a regression...)
Germano Cavalcante was assigned by Philipp Oeser 2019-09-20 15:45:40 +02:00
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Caused by 7c3bbe93aa, guess this one is for @mano-wii?
(note this only happens with Nearest Edge or Projected Edge Interpolated method...)

Caused by 7c3bbe93aa, guess this one is for @mano-wii? (note this only happens with `Nearest Edge` or `Projected Edge Interpolated` method...)

This issue was referenced by 8c60205bef

This issue was referenced by 8c60205bef314fe71df1116c76cd1ecf2e175580

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70109
No description provided.