Fix T70109: Crash with the Data Transfer Modifier (with any 'Edge Data' option)

The BVHTree was erroneously marked as not cached.